syntax = "proto3";

package sum;

option go_package = "github.com/RichardRivaldo/grpc-go/sum/proto";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 sum = 1;
}

service SumService {
    rpc Add(SumRequest) returns (SumResponse);
}